added distance calculation

--- a/Devops/index.html
+++ b/Devops/index.html
@@ -18,10 +18,17 @@
             </div>
             <button id="clear-filters">Clear All Filters</button>
         </div>
-        <div id="destinations-container">
-            </div>
+
+        <!-- Loading spinner -->
+        <div id="loading-spinner" style="display:none; text-align:center; margin:20px;">
+            <p>⏳ Calculating distances, please wait...</p>
+        </div>
+
+        <!-- Destinations will be displayed here -->
+        <div id="destinations-container"></div>
     </main>
 
     <script src="script.js"></script>
 </body>
 </html>
+
