Filter by distance in places page

--- a/Devops/index.html
+++ b/Devops/index.html
@@ -54,6 +54,13 @@
                     </div>
                 </div>
                 
+                <div class="filter-group">
+                    <label class="filter-label-header">Filter by Distance:</label>
+                    <div id="distance-filter-options" class="filter-grid">
+                        <!-- Distance filter options will be dynamically populated -->
+                    </div>
+                </div>
+                
                 <div class="filter-controls">
                     <button id="clear-filters" class="btn btn-secondary">Clear Filters</button>
                     <div class="loading-spinner" id="loading-spinner" style="display: none;">
